# bulk-webp-converter

./: App.xaml  App.xaml.cs  Cargo.toml  MainWindow.xaml  MainWindow.xaml.cs  Webp Converter.csproj  Webp Converter.sln
src/: cwebp_converter.rs  libwebp_sys_converter.rs  main.rs  managed_picture.rs  pixel_layout.rs  webp_config.rs  webp_memory.rs
