[package]
name = "image_converter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
rayon = "1"
walkdir = "2"
webp = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
